--- a/src/formalisation/figures/duplicationEtRecoll.tex
+++ b/src/formalisation/figures/duplicationEtRecoll.tex
@@ -30,7 +30,7 @@
 \end{tikzpicture}
   
 \vspace{1em}
-À la base, tout est sur le nœud $N_0$. On déplace le segment $B(B_1, T_B, C_1)$ et on le duplique sur deux nœuds $N_1$ et $N_2$.
+À la base, tout est sur le nœud $N_0$. On déplace le segment $(\lbrace B \rbrace, T_B, \lbrace C \rbrace)$ et on le duplique sur deux nœuds $N_1$ et $N_2$.
 \vspace{1em}
   
   
