--- a/src/formalisation/figures/deplacement2.tex
+++ b/src/formalisation/figures/deplacement2.tex
@@ -68,9 +68,9 @@ Devient
   \node [place,dotted] (Bprime) [right of=Ta] {$B'_1$};
   \node [place] (A3) [above of=Bprime] {$A_3$};
   \node [place] (AS) [green, below of=A]  {};
-  \node [transition] (TS) [green,right of=AS, label=$t_A - \delta$] at (4, -2.3) {};
+  \node [transition] (TS) [green,right of=AS, label=$t_A - \delta_{N \rightarrow N_d}$] at (5, -2.3) {};
   
-  \node [place] (B) [] at (6, -4.2) {$B_1$};
+  \node [place] (B) [] at (8, -4.2) {$B_1$};
   \node [transition] (Tb) [right of=B, label=$t_B$] {$T_B$};
   \node [place] (C) [right of=Tb] {$C_1$};
   
@@ -94,7 +94,7 @@ Devient
    \begin{pgfonlayer}{background}
     \node [black box, fit=(I2) (A2) (A3) (TS)] (Box1) {};
   	\node [below right] at (Box1.north west) {Nœud $N$};
-  	\node [black box, fit=(TS) (C)] (Box2) {};
+  	\node [black box, fit=(TS) (C), inner sep=1cm] (Box2) {};
   	\node [above left] at (Box2.south east) {Nœud $N_d$};
    \end{pgfonlayer}
   \end{scope}
