--- a/src/implementation.tex
+++ b/src/implementation.tex
@@ -22,7 +22,7 @@ J'ai aussi utilisé \brand{Qt} pour les interfaces graphiques, en raison de la c
 
 \subsubsection{Technologie réseau}
 Pour le réseau, j'ai très vite choisi d'utiliser \gls{zeroconf}. En effet, la majorité des utilisateurs étant des artistes, ils ne devraient pas avoir à se poser la question des adresses IP et ports à utiliser.
-Néanmoins, j'ai gardé la possibilité de connexions entre machines en utilisant un couple \verb|IP:port|.
+Néanmoins, j'ai gardé la possibilité de connexions entre machines en utilisant un couple \verb|IP:port|, principalement pour permettre un fonctionnement sur Internet.
 Pour la communication inter-machines, j'ai choisi d'utiliser \brand{OSC}. En effet, c'est le protocole utilisé dans \brand{i-score} et \brand{Jamoma}, et des bibliothèques pour s'en servir étaient déjà présentes.
 
 \subsection{Fonctionnement en équipe}
@@ -122,6 +122,7 @@ Des sessions clientes se connectent à une session maîtresse, généralement la
 
 Une session maîtresse sert principalement à : 
 \begin{itemize}
+	\item Charger le fichier de scénario, et envoyer les données nécessaires à ceux qui en font la demande.
 	\item Avoir une vue maîtresse, permettant d'écrire sur tous les groupes.
 	\item Avoir une adresse à laquelle se connecter.
 	\item Mettre en relation les clients entre eux.
@@ -134,7 +135,7 @@ Des scénarios sont assignés à un groupe.
 
 Comme il a pu être vu en \cref{fig.RepartOSSIA}, la méthode visuelle recommandée pour différencier des groupes est la couleur.
 
-Un groupe peut aussi être mis en sourdine, que ce soit au niveau local (sur une seule machine), ou au niveau de la session (sur toutes les machines). Cela signifie que ses processus ne s'exécutent plus.
+Un groupe peut aussi être mis en sourdine, que ce soit au niveau local (sur une seule machine), ou au niveau de la session (sur toutes les machines). Cela signifie que ses processus ne s'exécutent plus. 
 
 Enfin, l'idée d'un groupe spécial dédié à la sauvegarde (\textit{backup}) est proposée : dans ce groupe, les clients sont par défaut mis en sourdine, à l'exception d'un seul. Si lors de l'exécution un des clients ne répond plus, la session maîtresse enlève sa sourdine à un autre client.
 
@@ -149,21 +150,30 @@ Au niveau de l'interface, il a été convenu d'ajouter une condition spéciale d
 \paragraph{Interface OSC}
 Un groupe possède de plus certaines fonctionnalités d'agrégation des clients qui l'exécutent, via l'exposition d'une interface en \ac{OSC}.
 
+Par exemple, comme présenté dans la \cref{fig.RepartOSSIA}, on propose la possibilité dans un groupe d'avoir des paramètres quelconques (définis par le compositeur), qui auraient un comportement local sur chaque nœud du groupe, mais aussi un comportement global : par exemple la moyenne des paramètres locaux, le maximum, une valeur au hasard\dots
+
 L'interface proposée est la suivante : (\texttt{group} peut être remplacé par le nom du groupe, mais cela pose problème car il faut alors interdire les caractères spéciaux et les espaces).
 
 En écriture sur le groupe : 
 \begin{itemize}
-	\item \texttt{/group/enable/fonctionnalité}
-	\item \texttt{/group/disable/fonctionnalité}
-	\item \texttt{/group/parameter/nomDuParamètre id}
+	\item \texttt{/group/enable/fonctionnalité ip port param1 param2 \dots} active l'envoi de messages décrits par cette fonctionnalité sur la machine dont les paramètres sont passés au message.
+	\item \texttt{/group/disable/fonctionnalité ip port} fait l'inverse.
+	\item \texttt{/group/parameter/nomDuParamètre id} permet d'écrire un paramètre sur le groupe, pour permettre des comportements globaux.
 \end{itemize}
 
 Émis par le groupe :
 \begin{itemize}
-	\item \texttt{/group/connexions}
-	\item \texttt{/group/nomDuParamère/fonctionnalité}
+	\item \texttt{/group/connexions} qui renvoie le nombre de machines connectées à ce groupe quand une nouvelle machine se connecte.
+	\item \texttt{/group/parameter/nomDuParamètre/fonctionnalité} envoi le message correspondant à la fonctionnalité présentée.
 \end{itemize}
 
+Il y a deux possibilités pour réaliser cela : 
+\begin{itemize}
+	\item Approche simple : la machine qui fait tourner la session maître gère les options des groupes, et envoie et reçoit les messages décris précédemment.
+	\item Approche répartie : dans chaque groupe, définir automatiquement un sous-maître (par exemple la machine la plus puissante, ou bien la première à s'être connectée) qui s'occupera de cette tâche. Cela permet notamment de répartir l'envoi de fonctionnalités différentes sur les différentes machines. En revanche il est possible qu'elles doivent alors toutes communiquer entre elles (du moins dans le groupe).
+\end{itemize}
+
+Pour des raisons de temps, et de simplicité d'implémentation, c'est la première approche qui est retenue.
 \subsection{Implémentation dans le logiciel i-score}
 \subsubsection{Algorithme opérant sur réseaux de Petri}
 \subsection{Démonstration dans le cadre d'un vrai scénario}
